2006-04-19  Sebastien Pouliot  <sebastien@ximian.com>

	* SessionConfig.cs: Avoid a cast.
	* SessionDictionary.cs: Remove unused internal methods.
	* SessionId.cs: Const-ify internal/private values.
	* SessionStateModule.cs: Const-ify internal/private values.

2006-03-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* SessionSQLServerHandler.cs: if the connection to the DB is lost, retry
	the select/update/insert/delete commands after reconnecting.
	Fixes bug #77785.

2006-03-04  Robert Jordan  <robertj@gmx.net>

	* SessionSQLServerHandler.cs: make SQL statements and parameters
	provider independent/configurable.
	* SessionSQLServerHandler.cs (SelectSession): properly dispose
	the data reader. Fixes bug #77698.

2006-02-28  Chris Toshok  <toshok@ximian.com>

	* IStateRuntime.cs: wrap new interface method with NET_2_0.

2006-02-28  Chris Toshok  <toshok@ximian.com>

	* SessionStateActions.cs: oops, actually rename the enum, not just
	the file.

2006-02-28  Chris Toshok  <toshok@ximian.com>

	* SessionStateActions.cs: rename SessionStateActionFlags to this.

	* ISessionIDManager.cs: rename ISessionIDModule to this.

	* IStateRuntime.cs: corcompare work.

2006-02-01  Chris Toshok  <toshok@ximian.com>

	* SessionStateServerHandler.cs: CONFIGURATION_2_0 => NET_2_0.

	* SessionSQLServerHandler.cs: same.

	* SessionStateModule.cs: same.

	* ISessionHandler.cs: same.

	* SessionInProcHandler.cs: same.

2006-01-18 Konstantin Triger <kostat@mainsoft.com>

	* HttpSessionState.jvm.cs: correcting serialization conditions.

2006-01-09  Konstantin Triger <kostat@mainsoft.com>

	* HttpSessionState.jvm.cs: merging HttpSessionState.cs@@/main/19-24

2005-11-28  Chris Toshok  <toshok@ximian.com>

	* SessionStateModule.cs: CONFIGURATION_2_0 work.

	* SessionSQLServerHandler.cs: CONFIGURATION_2_0 work.

	* SessionInProcHandler.cs: CONFIGURATION_2_0 work.

	* SessionStateServerHandler.cs: CONFIGURATION_2_0 work.
	
	* ISessionHandler.cs (Init): @config is a SessionStateSection if